# LG_Buddy

./: LG_Buddy_Brightness.desktop  README.md  configure.sh  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
crates/lg-buddy/: Cargo.toml
crates/lg-buddy/src/: commands.rs  config.rs  events.rs  lib.rs  lifecycle.rs  logind.rs  main.rs  notifications.rs  screen.rs  session_bus.rs  session_notifications.rs  settings.rs  state.rs  tv.rs  updates.rs  version.rs  web_os.rs
crates/lg-buddy/src/session/: runner.rs
crates/lg-buddy/src/session/gamepad/: devices.rs
crates/lg-buddy/src/sources/linux/: network_manager.rs
crates/lg-buddy/tests/: auth_key_persistence.rs  mock_bscpylgtvcommand.rs  runtime_entrypoints.rs  web_os_client.rs
crates/lg-buddy/tests/cucumber_support/: steps.rs  world.rs
crates/lg-buddy/tests/features/: brightness.feature  monitor_gnome.feature  settings.feature
crates/lg-buddy/tests/support/: mock_webos.rs  mod.rs
docs/: architecture-overview.md  defaults-and-configuration.md  development.md  release-process.md  runtime-event-handler-map.md  session-backend-model.md  testing-strategy.md  user-guide.md
scripts/: build-release-bundle.sh  publish-release-assets.sh  test-release-bundle.sh
systemd/: LG_Buddy.service  LG_Buddy_lifecycle.service  LG_Buddy_screen.service  LG_Buddy_update_check.service  LG_Buddy_update_check.timer
tmp/: actionable-update-notifications-plan.md
