[package]
name = "lg-buddy"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
dbus = { version = "0.9.11", features = ["vendored"] }
dbus-crossroads = "0.5.3"
evdev = "0.13.2"
libc = "0.2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "lg-buddy"
path = "src/main.rs"

[dev-dependencies]
cucumber = "0.22.1"
tokio = { version = "1", features = ["macros", "rt"] }

[[test]]
name = "cucumber"
path = "tests/cucumber.rs"
harness = false
